<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultParentLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/default_layout_margin"
        android:paddingStart="@dimen/default_layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/attr_layout_bottom_dotted"
            android:orientation="vertical"
            android:padding="20dp">

            <com.jjosft.android.lottovillage.base.ClearEditText
                android:id="@+id/edit_name"
                style="@style/DefaultEditText"
                android:hint="@string/nick_name"
                android:inputType="text" />

            <com.jjosft.android.lottovillage.base.PasswordEditText
                android:id="@+id/edit_password"
                style="@style/DefaultEditText"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <com.jjosft.android.lottovillage.base.PasswordEditText
                android:id="@+id/edit_confirm_password"
                style="@style/DefaultEditText"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_phone_number"
                    style="@style/DefaultEditText"
                    android:layout_weight="2"
                    android:drawableStart="@drawable/ic_phone_24dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    tools:ignore="TextFields" />

                <Button
                    android:id="@+id/button_certified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/attr_button_init"
                    android:inputType="number"
                    android:onClick="customOnClick"
                    android:text="@string/send_message"
                    tools:ignore="TextViewEdits" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_confirm_certified"
                    style="@style/DefaultEditText"
                    android:layout_weight="2"
                    android:drawableStart="@drawable/ic_verified_user_24dp"
                    android:hint="@string/confirm_certified" />

                <Button
                    android:id="@+id/button_confirm_certified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/attr_button_init"
                    android:inputType="number"
                    android:onClick="customOnClick"
                    android:text="@string/certified"
                    tools:ignore="TextViewEdits" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/attr_layout_normal"
            android:orientation="vertical"
            android:padding="20dp">

            <CheckedTextView
                android:id="@+id/checked_text_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_5"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="customOnClick"
                android:text="@string/service_terms_conditions" />

            <CheckedTextView
                android:id="@+id/checked_text_personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_5"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:onClick="customOnClick"
                android:text="@string/personal_information_terms_conditions" />

            <Button
                android:id="@+id/button_registered"
                style="@style/ConfirmButton"
                android:enabled="false"
                android:onClick="customOnClick"
                android:text="@string/registered" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>